tests/tooling/fixtures/native/recovery/negative/negative_assignment_compound_bitwise_unknown_target.objc3
// Expected diagnostic code(s): O3S214.
module NegativeAssignmentCompoundBitwiseUnknownTarget;

fn main() -> i32 {
  missing ^= 1;
  return 0;
}
